Call updateButtonGeometry after decorationButtonsLeftChanged and decorationButtonsRightChanged added ::update at the end of updateButtonGeometry

BUG: 356869