kdecoration/oxygendecoration.cpp
@@ -43,6 +43,7 @@
 
 #include <QPainter>
 #include <QTextStream>
+#include <QTimer>
 
 #if OXYGEN_HAVE_X11
 #include <QX11Info>
@@ -147,6 +148,11 @@ namespace Oxygen
         // a change in font might cause the borders to change
         connect(s.data(), &KDecoration2::DecorationSettings::fontChanged, this, &Decoration::recalculateBorders);
         connect(s.data(), &KDecoration2::DecorationSettings::spacingChanged, this, &Decoration::recalculateBorders);
+
+        // buttons
+        connect(s.data(), &KDecoration2::DecorationSettings::spacingChanged, this, &Decoration::updateButtonsGeometryDelayed);
+        connect(s.data(), &KDecoration2::DecorationSettings::decorationButtonsLeftChanged, this, &Decoration::updateButtonsGeometryDelayed);
+        connect(s.data(), &KDecoration2::DecorationSettings::decorationButtonsRightChanged, this, &Decoration::updateButtonsGeometryDelayed);
 
         // full reconfiguration
         connect(s.data(), &KDecoration2::DecorationSettings::reconfigured, this, &Decoration::reconfigure);
@@ -335,6 +341,10 @@ namespace Oxygen
     }
 
     //________________________________________________________________
+    void Decoration::updateButtonsGeometryDelayed()
+    { QTimer::singleShot( 0, this, &Decoration::updateButtonsGeometry ); }
+
+    //________________________________________________________________
     void Decoration::updateButtonsGeometry()
     {
         auto s = settings();
@@ -397,6 +407,7 @@ namespace Oxygen
 
         }
 
+        update();
 
     }
 
