kdecoration/oxygendecoration.h
@@ -101,6 +101,7 @@ namespace Oxygen
         void reconfigure();
         void recalculateBorders();
         void updateButtonsGeometry();
+        void updateButtonsGeometryDelayed();
         void updateTitleBar();
         void updateAnimationState();
         void updateSizeGripVisibility();
